Adjusted the Project so ViewModels and Models are in seperate Projects

--- a/NtierWH1/MainWindow.xaml
+++ b/NtierWH1/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NtierWH"
+        xmlns:local="clr-namespace:NtierWH" xmlns:ViewModels="clr-namespace:ViewModels;assembly=ViewModels" xmlns:local1="clr-namespace:NtierWH"
          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
@@ -25,7 +25,7 @@
         </DataTemplate>
     </Window.Resources>
     <Window.DataContext>
-        <local:ViewModel></local:ViewModel>
+        <ViewModels:ViewModel></ViewModels:ViewModel>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -35,10 +35,10 @@
         <ListBox ItemTemplate="{DynamicResource LessonItemTemplate}" ItemsSource="{Binding LessonList}" Name="LessonListBox" Foreground="LightGray" SelectedItem="{Binding SelectedLesson}"></ListBox>
         <ContentControl Content="{Binding CurrentView}" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <ContentControl.Resources>
-                <DataTemplate DataType="{x:Type local:WelcomeViewModel}">
+                <DataTemplate DataType="{x:Type ViewModels:WelcomeViewModel}">
                     <local:WelcomeView></local:WelcomeView>
                 </DataTemplate>
-                <DataTemplate DataType="{x:Type local:LessonViewModel}">
+                <DataTemplate DataType="{x:Type ViewModels:LessonViewModel}">
                     <local:LessonDetailsView DataContext="{Binding ElementName=LessonListBox, Path=SelectedItem}"></local:LessonDetailsView>
                 </DataTemplate>
             </ContentControl.Resources>
